[PaintTouchActionRects] Fix some frame throttling tests

This test changes expectation for some frame throttling tests with
PaintTouchActionRects enabled. The behavior is slightly different in the
unit test and the comments explains why.

Bug: 881890
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees
Change-Id: I0e6fdeebcbe016675ee082f38d8da66ce30abbeb
Reviewed-on: https://chromium-review.googlesource.com/1237056
Commit-Queue: Xida Chen <xidachen@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592915}
Former-commit-id: b8da26d93838a7fcf522bce7e6a27257b25c637e